# HermesFlow

./: .cicd-test-marker  .claudeignore  .dockerignore  .env.example  .env.polygon.example  .gitignore  .pre-commit-config.yaml  ARGOCD-GITHUB-SETUP-GUIDE.md  ARGOCD-SETUP-QUICK-GUIDE.md  CI-CD-PROGRESS-REPORT.md  CICD-SUCCESS-REPORT.md  CICD-USAGE-GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FINAL-DIAGNOSIS.md  GITOPS-PAT-SETUP.md  LICENSE  Makefile  PROJECT_INDEX.md  QUICK-START-CICD.md  README.md  architecture.md  commit-and-push.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  get-pip.py  progress.md  pyproject.toml  requirements-test.txt  setup.py  test-cicd-flow.sh
modules/data-engine/: Cargo.toml  Dockerfile  README.md
modules/data-engine/config/: default.toml  dev.toml  prod.toml
modules/data-engine/scripts/: benchmark.sh
modules/data-engine/src/: config.rs  error.rs  health.rs  lib.rs  main.rs
modules/data-engine/src/models/: data_source_type.rs  market_data.rs  market_data_type.rs  mod.rs
modules/data-engine/src/registry/: mod.rs
modules/data-engine/src/server/: handlers.rs  routes.rs
modules/data-engine/src/storage/: clickhouse.rs
services/backtest-engine/: Cargo.toml  FOLDER_INDEX.md
services/backtest-engine/src/: backtest.rs  config.rs  lib.rs  main.rs
services/backtest-engine/src/factors/: atr.rs  bollinger.rs  cci.rs  dynamic.rs  engineer.rs  indicators.rs  macd.rs  mfi.rs  mod.rs  moving_averages.rs  obv.rs  problematic_section.txt  registry.rs  stochastic.rs  traits.rs  vwap.rs  williams_r.rs
services/backtest-engine/src/vm/: engine.rs  mod.rs  ops.rs  vm.rs
services/backtest-engine/tests/: parity_check.rs
services/common/: Cargo.toml  FOLDER_INDEX.md
services/common/src/: events.rs  health.rs  heartbeat.rs  lib.rs  metrics.rs  telemetry.rs
services/data-engine/: .gitignore  Cargo.toml  Dockerfile  FOLDER_INDEX.md  README.md  check_final.txt  check_final_2.txt
services/data-engine/benches/: parser_benchmarks.rs
services/data-engine/config/: prod.toml.template
services/data-engine/docs/: polygon_usage.md
services/data-engine/examples/: verify_jupiter.rs
services/data-engine/scripts/: audit_data_quality.py  audit_sources.py  batch_backfill.py  clean_data.py  deploy.sh  dev-setup.sh  monitor_data_quality.py  quickstart.sh
services/data-engine/src/: collector_spawner.rs  config.rs  error.rs  lib.rs  main.rs  sync_worker.rs
services/data-engine/src/collectors/: akshare.rs  circuit_breaker.rs  ibkr.rs  mod.rs  polymarket.rs  twitter.rs
services/data-engine/src/collectors/binance/: client.rs  connector.rs  mod.rs  websocket.rs
services/data-engine/src/collectors/birdeye/: client.rs  mod.rs  (+3 more)
services/data-engine/src/models/: asset_type.rs  candle.rs  data_source_type.rs  market_data.rs  mod.rs  prediction_data.rs  social_data.rs  token_metadata.rs  trading.rs
services/data-engine/src/monitoring/: dead_letter.rs  health.rs  market_schedule.rs  metrics.rs  mod.rs  quality.rs
services/data-engine/src/registry/: parser_registry.rs
services/data-engine/src/repository/: mod.rs  token.rs
services/data-engine/src/server/: handlers.rs  mod.rs  routes.rs
services/data-engine/src/storage/: clickhouse.rs  mod.rs  redis.rs
services/data-engine/src/tasks/: candle_aggregation.rs  data_quality.rs  historical_sync.rs  manager.rs  mod.rs  polygon_sync.rs  token_discovery.rs
services/data-engine/src/trading/: ibkr_trader.rs
services/data-engine/src/traits/: connector.rs  parser.rs
services/data-engine/src/utils/: mod.rs
services/data-engine/tests/: aggregation_test.rs  polygon_integration.rs
services/execution-engine/: Cargo.toml  Dockerfile  FOLDER_INDEX.md
services/execution-engine/src/: command_listener.rs  health.rs  lib.rs  main.rs  metrics.rs  promotion.rs  reconciliation.rs  risk.rs  shadow.rs
services/execution-engine/src/traders/: futu_trader.rs  ibkr_trader.rs  mod.rs  paper_trader.rs  raydium_swap.rs  raydium_trader.rs  solana_trader.rs
services/gateway/: Cargo 2.toml  Cargo.toml  Dockerfile  FOLDER_INDEX.md  pom.xml
services/gateway/src/: auth_handler.rs  health_checker.rs  jwt_auth.rs  main 2.rs  main.rs  metrics.rs
services/strategy-engine/: Cargo.toml  Dockerfile  FOLDER_INDEX.md  README.md  best_meme_strategy.json  pyproject.toml
services/strategy-engine/src/: event_bus.rs  health.rs  lib.rs  main.rs  market_data_manager.rs  metrics.rs  portfolio.rs  risk.rs  signal.rs  signal_buffer.rs
services/strategy-engine/src/strategy_engine/: __init__.py  main.py
services/strategy-engine/tests/: __init__.py  integration_loop.rs  live_simulation.rs  test_health.py
services/strategy-generator/: Cargo.toml  Dockerfile  FOLDER_INDEX.md  check_strat_final.txt  check_strat_fix.txt
services/strategy-generator/src/: api.rs  backtest.rs  factor_loader.rs  genetic.rs  genome_decoder.rs  health.rs  llm_oracle.rs  main.rs  metrics.rs
services/strategy-generator/src/backtest/: data_frame.rs  ensemble.rs  ensemble_weights.rs  factor_importance.rs  hrp.rs  hypothesis.rs  incremental_pca.rs  mod.rs  portfolio.rs
services/strategy-generator/src/mcts/: arena.rs  mod.rs  policy.rs  search.rs  state.rs
services/twitter-scraper/: pyproject.toml
services/twitter-scraper/scripts/: generate_cookies.py
src/data-service/: Dockerfile  pyproject.toml
src/data-service/app/: main.py
src/data-service/app/core/: config.py  logging.py  metrics.py
src/data-service/app/models/: config_data.py  market_data.py
src/data-service/app/services/: binance_service.py  clickhouse_service.py  data_validator.py  kafka_producer.py  okx_service.py  postgresql_service.py  redis_service.py
src/data-service/scripts/: start.sh
src/data-service/tests/: test_binance_service.py  test_clickhouse_service.py  test_data_validator.py  test_okx_service.py  test_postgresql_service.py  test_redis_service.py
src/data_service/collectors/common/: Cargo.toml  error.rs  mod.rs  models.rs
src/data_service/common/: Cargo.toml
src/data_service/common/src/: collector.rs  lib.rs  metrics.rs
(+1170 files in other folders)
