[workspace]
members = [
    "src/data_service/common",
    "src/data_service/collectors/crypto/huobi",
    "src/data_service/collectors/chain/ethereum",
    "src/data_service/collectors/chain/solana",
    "src/data_service/collectors/dex/uniswap_v3",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
web3 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
futures = "0.3"
ethers = "2.0"
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
ethers-middleware = "2.0"
ethers-signers = "2.0" 