[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = []
health = ["dep:axum", "dep:tracing", "dep:tokio"]
heartbeat = ["dep:redis", "dep:tracing", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Optional deps gated by features
axum = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
