[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = []
health = ["dep:axum", "dep:tracing", "dep:tokio"]
heartbeat = ["dep:redis", "dep:tracing", "dep:tokio"]
metrics = ["dep:axum", "dep:tracing", "dep:prometheus", "dep:lazy_static"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Optional deps gated by features
axum = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
