[package]
name = "data-engine"
version = "0.1.0"
edition = "2021"
authors = ["HermesFlow Team"]
description = "High-performance data collection and distribution engine"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# HTTP server
axum = "0.7"

# Database and cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio", "tokio-rustls-comp"] }
clickhouse = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "rust_decimal", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Configuration
config = "0.14"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }

# URL parsing
url = "2.5"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# IBKR API
ibapi = "2.5"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
criterion = "0.5"
testcontainers = "0.15"

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
