[package]
name = "data-engine"
version = "0.1.0"
edition = "2021"
authors = ["HermesFlow Team"]
description = "High-performance data collection and distribution engine"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# HTTP server
axum = { workspace = true, features = ["ws", "macros"] }

# Database and cache
redis = { workspace = true }
clickhouse = { workspace = true }
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }
chrono-tz = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

# URL parsing
url = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# IBKR API
ibapi = "2.5"
clap = { workspace = true }

# Crypto Exchange Signing
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Task Scheduling
common = { workspace = true, features = ["telemetry"] }
tokio-cron-scheduler = { workspace = true }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
criterion = "0.5"
testcontainers = "0.15"

[[bench]]
name = "parser_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false
