[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
hyper = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Database (trade persistence)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# IBKR
ibapi = { version = "2.8", default-features = false, features = ["sync"] }

# Observability
prometheus = "0.13"
lazy_static = "1.4"

# Internal
common = { path = "../common", features = ["health", "heartbeat", "metrics"] }

[dev-dependencies]
