[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }
clickhouse = { version = "0.11", features = ["time"] }
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"

