[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
clickhouse = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

# JWT Auth
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# Rate limiting
tower_governor = { workspace = true }

# Internal
common = { workspace = true, features = ["metrics", "telemetry"] }

# HTTP client (0.12 with streaming support)
reqwest = { version = "0.12", features = ["json", "stream"] }
