[package]
name = "strategy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.0"
backtest-engine = { path = "../backtest-engine" }
common = { path = "../common" }
ndarray = "0.15"
redis = "0.23"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
hyper = "1.0"
base64 = "0.21"


[dev-dependencies]
