[package]
name = "strategy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
ndarray = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
base64 = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Internal
backtest-engine = { workspace = true }
common = { workspace = true, features = ["health", "heartbeat", "metrics"] }

[dev-dependencies]
