[package]
name = "strategy-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ndarray = { workspace = true }
rust_decimal = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }

reqwest = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }

# Internal
backtest-engine = { workspace = true }
common = { workspace = true, features = ["health", "heartbeat"] }
