[tool.poetry]
name = "twitter-scraper-service"
version = "0.1.0"
description = "FastAPI service for Playwright-based Twitter scraping"
authors = ["HermesFlow Team"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
playwright = "^1.41.0"
pydantic = "^2.5.3"
aiofiles = "^23.2.1"
jmespath = "^1.0.1"
python-multipart = "^0.0.6"
boto3 = "^1.34.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]  # pycodestyle, pyflakes, bugbear, isort
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
