[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.19.0"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
url = "2.5.0"
futures = "0.3"
hex = "0.4"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 