[package]
name = "solana"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
solana-account-decoder = "1.17"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
url = "2.5.0"
futures = "0.3"
base64 = "0.21"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[example]]
name = "monitor"
path = "examples/monitor.rs" 