[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../../collectors/common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
tracing = "0.1"
async-trait = "0.1"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4" 