[package]
name = "bitfinex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.4"
log = "0.4"
base64 = "0.21"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
