[package]
name = "mexc-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5" 