[package]
name = "okx"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../../common" }
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tracing = "0.1"
url = "2.4"
chrono = "0.4"
rust_decimal = "1.31"
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"
thiserror = "1.0" 