[package]
name = "curve"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../../../common" }
tokio = { version = "1.28", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.30"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11" 