[package]
name = "uniswap_v3"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
chrono = { version = "0.4", features = ["serde"] }
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }

[dev-dependencies]
tokio-test = "0.4" 