[package]
name = "uniswap_v3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
web3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
ethers = { workspace = true }
ethers-core = { workspace = true }
ethers-providers = { workspace = true }
ethers-contract = { workspace = true }
ethers-middleware = { workspace = true }
ethers-signers = { workspace = true }
futures = { workspace = true }
rust_decimal = { version = "1.31", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0" 